tests/snapshots/snapshot_tests__random_board_snapshot_138.snap
---
source: tests/snapshot_tests.rs
assertion_line: 45
expression: "(minions, recording)"
---
- ? idx: 1
    version: 1
  : Golden Mechapony
  ? idx: 2
    version: 1
  : Golden Leapfrogger
  ? idx: 3
    version: 1
  : Golden Leeching Felhound
  ? idx: 4
    version: 1
  : Golden Coldlight Seer
  ? idx: 5
    version: 1
  : Sparring Partner
  ? idx: 6
    version: 1
  : Glowscale
  ? idx: 7
    version: 1
  : The Walking Fort
  ? idx: 8
    version: 1
  : Prized Promo-Drake
  ? idx: 9
    version: 1
  : "Sin'dorei Straight Shot"
  ? idx: 10
    version: 1
  : Golden Bassgill
  ? idx: 11
    version: 1
  : "Golden Spawn of N'Zoth"
  ? idx: 12
    version: 1
  : Seafood Slinger
  ? idx: 13
    version: 1
  : Golden Obsidian Ravager
  ? idx: 14
    version: 1
  : Golden Titus Rivendare
- - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 14
              version: 1
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 1
        version: 1
      defender:
        idx: 6
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 14
              version: 1
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 1
        version: 1
      defender:
        idx: 6
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 6
        version: 1
      amount: 2
      source:
        idx: 1
        version: 1
  - TakeDamage:
      target:
        idx: 1
        version: 1
      amount: 4
      source:
        idx: 6
        version: 1
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 14
              version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 1
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 1
        version: 1
  - AfterAttack:
      attacker:
        idx: 1
        version: 1
      defender:
        idx: 6
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 14
              version: 1
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 2
        version: 1
      defender:
        idx: 5
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 14
              version: 1
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 2
        version: 1
      defender:
        idx: 5
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 5
        version: 1
      amount: 6
      source:
        idx: 2
        version: 1
  - TakeDamage:
      target:
        idx: 2
        version: 1
      amount: 3
      source:
        idx: 5
        version: 1
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 14
              version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 5
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 5
        version: 1
  - AfterAttack:
      attacker:
        idx: 2
        version: 1
      defender:
        idx: 5
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 14
              version: 1
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 3
        version: 1
      defender:
        idx: 6
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 14
              version: 1
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 3
        version: 1
      defender:
        idx: 6
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 6
        version: 1
      amount: 6
      source:
        idx: 3
        version: 1
  - TakeDamage:
      target:
        idx: 3
        version: 1
      amount: 4
      source:
        idx: 6
        version: 1
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 14
              version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 6
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 6
        version: 1
  - AfterAttack:
      attacker:
        idx: 3
        version: 1
      defender:
        idx: 6
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 14
              version: 1
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 4
        version: 1
      defender:
        idx: 11
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 14
              version: 1
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 4
        version: 1
      defender:
        idx: 11
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 11
        version: 1
      amount: 4
      source:
        idx: 4
        version: 1
  - TakeDamage:
      target:
        idx: 4
        version: 1
      amount: 4
      source:
        idx: 11
        version: 1
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 14
              version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 11
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 11
        version: 1
  - AfterAttack:
      attacker:
        idx: 4
        version: 1
      defender:
        idx: 11
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 14
              version: 1
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 7
        version: 1
      defender:
        idx: 10
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 14
              version: 1
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 7
        version: 1
      defender:
        idx: 10
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 10
        version: 1
      amount: 4
      source:
        idx: 7
        version: 1
  - TakeDamage:
      target:
        idx: 7
        version: 1
      amount: 12
      source:
        idx: 10
        version: 1
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 14
              version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 10
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 10
        version: 1
  - Death:
      minion:
        idx: 7
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 7
        version: 1
  - AfterAttack:
      attacker:
        idx: 7
        version: 1
      defender:
        idx: 10
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 14
              version: 1
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 8
        version: 1
      defender:
        idx: 3
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 14
              version: 1
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 8
        version: 1
      defender:
        idx: 3
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 3
        version: 1
      amount: 3
      source:
        idx: 8
        version: 1
  - TakeDamage:
      target:
        idx: 8
        version: 1
      amount: 6
      source:
        idx: 3
        version: 1
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 14
              version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 8
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 8
        version: 1
  - Death:
      minion:
        idx: 3
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 3
        version: 1
  - AfterAttack:
      attacker:
        idx: 8
        version: 1
      defender:
        idx: 3
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 14
              version: 1
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 9
        version: 1
      defender:
        idx: 4
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 14
              version: 1
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 9
        version: 1
      defender:
        idx: 4
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 4
        version: 1
      amount: 3
      source:
        idx: 9
        version: 1
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 14
              version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 4
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 4
        version: 1
  - AfterAttack:
      attacker:
        idx: 9
        version: 1
      defender:
        idx: 4
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 14
              version: 1
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 9
        version: 1
      defender:
        idx: 14
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 14
              version: 1
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 9
        version: 1
      defender:
        idx: 14
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 14
        version: 1
      amount: 3
      source:
        idx: 9
        version: 1
  - TakeDamage:
      target:
        idx: 9
        version: 1
      amount: 2
      source:
        idx: 14
        version: 1
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 14
              version: 1
  - DeathCheck: ~
  - AfterAttack:
      attacker:
        idx: 9
        version: 1
      defender:
        idx: 14
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 14
              version: 1
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 12
        version: 1
      defender:
        idx: 9
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 14
              version: 1
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 12
        version: 1
      defender:
        idx: 9
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 9
        version: 1
      amount: 5
      source:
        idx: 12
        version: 1
  - TakeDamage:
      target:
        idx: 12
        version: 1
      amount: 3
      source:
        idx: 9
        version: 1
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 14
              version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 9
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 9
        version: 1
  - AfterAttack:
      attacker:
        idx: 12
        version: 1
      defender:
        idx: 9
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 14
              version: 1
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 13
        version: 1
      defender:
        idx: 2
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 14
              version: 1
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 13
        version: 1
      defender:
        idx: 2
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 2
        version: 1
      amount: 14
      source:
        idx: 13
        version: 1
  - TakeDamage:
      target:
        idx: 13
        version: 1
      amount: 6
      source:
        idx: 2
        version: 1
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 14
              version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 2
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 2
        version: 1
  - AfterAttack:
      attacker:
        idx: 13
        version: 1
      defender:
        idx: 2
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 14
              version: 1
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 14
        version: 1
      defender:
        idx: 13
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 14
              version: 1
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 14
        version: 1
      defender:
        idx: 13
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 13
        version: 1
      amount: 2
      source:
        idx: 14
        version: 1
  - TakeDamage:
      target:
        idx: 14
        version: 1
      amount: 14
      source:
        idx: 13
        version: 1
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 14
              version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 14
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 14
        version: 1
  - AfterAttack:
      attacker:
        idx: 14
        version: 1
      defender:
        idx: 13
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 13
        version: 1
      defender:
        idx: 12
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 13
        version: 1
      defender:
        idx: 12
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 12
        version: 1
      amount: 14
      source:
        idx: 13
        version: 1
  - TakeDamage:
      target:
        idx: 13
        version: 1
      amount: 5
      source:
        idx: 12
        version: 1
  - AuraUpdate: ~
  - DeathCheck: ~
  - Death:
      minion:
        idx: 12
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 12
        version: 1
  - AfterAttack:
      attacker:
        idx: 13
        version: 1
      defender:
        idx: 12
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - End: BottomWin

